--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,9 @@ sqlparse==0.2.3
 djangorestframework==3.9.0
 pyqrcode==1.2.1
 pillow==5.3.0
-reportlab==3.5.12
 pypng==0.0.18
-lxml==4.2.5
-cssselect2==0.2.1
 svglib==0.9.0
-tinycss2==0.6.1
-webencodings==0.5.1
 PyPDF2==1.26.0
+dropbox==9.3.0
+django-celery-results==1.0.4
+redis==3.2.0
